# xAdvect

./: .gitignore  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-request.yml  ruff-format.yml
doc/source/: conf.py  index.rst
doc/source/_assets/: xadvect-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: advect.rst  interpolate.rst  spatial.rst  tools.rst  utilities.rst
doc/source/api_reference/datasets/: database.rst  datasets.rst  fetch.rst
doc/source/api_reference/io/: dataset.rst  geotiff.rst  io.rst  netcdf.rst
doc/source/getting_started/: Contributing.rst  Install.rst  Resources.rst
doc/source/notebooks/: Plot-Velocities.ipynb
doc/source/project/: Citations.rst  Contributors.rst  Licenses.rst  Testing.rst
doc/source/user_guide/: Examples.rst
test/: test_advect.py
xAdvect/: __init__.py  advect.py  interpolate.py  spatial.py  tools.py  utilities.py  version.py
xAdvect/datasets/: __init__.py  database.json  database.py  fetch.py
xAdvect/io/: __init__.py  dataset.py  geotiff.py  netcdf.py
